feat: create opening swagger docs
